[gd_scene load_steps=11 format=3 uid="uid://beeej6pkhpe6e"]

[ext_resource type="Script" path="res://Scripts/Content4Manager.gd" id="1_0ftqu"]
[ext_resource type="PackedScene" uid="uid://bt5sit6uvmj8v" path="res://Scenes/UI/delete_account.tscn" id="2_0ebx4"]
[ext_resource type="Texture2D" uid="uid://cegrvwt7fh2aa" path="res://Textures/profileBackground.webp" id="2_0rrsy"]
[ext_resource type="Texture2D" uid="uid://d0ifgj1klxf7e" path="res://Icons/workout.svg" id="3_j5igh"]
[ext_resource type="FontFile" uid="uid://c7ffk3w7me6je" path="res://Fonts/Roboto-Medium.ttf" id="4_1av45"]
[ext_resource type="FontFile" uid="uid://btkim3ryv071i" path="res://Fonts/Roboto-Bold.ttf" id="5_mhlr8"]
[ext_resource type="Theme" uid="uid://dq4vxtwdfue5" path="res://Themes/LightMode.tres" id="6_mafie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xm40b"]
bg_color = Color(0.44, 0.0806667, 0, 0.52549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6pdk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvt6n"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.670588, 0.0862745, 0.0862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 12

[node name="Content4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ftqu")
deleteAccountScene = ExtResource("2_0ebx4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0rrsy")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xm40b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
texture = ExtResource("3_j5igh")
expand_mode = 1
stretch_mode = 5

[node name="WorkoutCounter" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_1av45")
theme_override_font_sizes/font_size = 50
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UserName" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_mhlr8")
theme_override_font_sizes/font_size = 70
text = "User Name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_a6pdk")

[node name="Control" type="Control" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer1" type="MarginContainer" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer1"]
layout_mode = 2
theme_type_variation = &"Label_Mid"
theme_override_font_sizes/font_size = 30
text = "Training Personalization"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2

[node name="WritingCB" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_type_variation = &"Button_Bubble"
theme_override_font_sizes/font_size = 40
toggle_mode = true
action_mode = 0
text = "Writing"

[node name="SpeakingCB" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_type_variation = &"Button_Bubble"
theme_override_font_sizes/font_size = 40
toggle_mode = true
action_mode = 0
text = "Speaking"

[node name="ReadingCB" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_type_variation = &"Button_Bubble"
theme_override_font_sizes/font_size = 40
toggle_mode = true
action_mode = 0
text = "Reading"

[node name="MathsCB" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_type_variation = &"Button_Bubble"
theme_override_font_sizes/font_size = 40
toggle_mode = true
action_mode = 0
text = "Maths"

[node name="MemoryCB" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_type_variation = &"Button_Bubble"
theme_override_font_sizes/font_size = 40
toggle_mode = true
action_mode = 0
text = "Memory"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_type_variation = &"Label_Mid"
theme_override_font_sizes/font_size = 30
text = "Manage Account"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(850, 210)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_mafie")
theme_type_variation = &"Button_Bubble"
theme_override_colors/font_pressed_color = Color(0.67, 0.0871, 0.0871, 1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_yvt6n")
text = "Delete Account"

[connection signal="toggled" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer/WritingCB" to="." method="_on_check_button_2_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer/SpeakingCB" to="." method="_on_check_button_2_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer/ReadingCB" to="." method="_on_check_button_3_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer/MathsCB" to="." method="_on_check_button_4_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer2/GridContainer/MemoryCB" to="." method="_on_check_button_5_toggled"]
[connection signal="pressed" from="VBoxContainer/Panel/Control/ScrollContainer/VBoxContainer/MarginContainer4/Button" to="." method="_on_delete_account_pressed"]
